<resources>
    <string name="app_name">Book Listing</string>

    <string name="no_books">No books found.</string>

    <string name="no_internet_connection">There is no internet connection.</string>
    <string name="authors">Authors</string>
    <string name="publisher">Publisher</string>
    <string name="published_on">Published on</string>
    <string name="identifiers">Identifiers</string>
    <string name="more_info">More Info</string>
    <string name="enter_your_query_to_find_books">Enter your query to find books</string>
    <string name="search">Search</string>

</resources>
